# sheaf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  netlify.toml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml
api-reference/: index.html
api-reference/api/: index.html
api-reference/batch/: index.html
api-reference/cache/: index.html
api-reference/client/: index.html
api-reference/lora/: index.html
api-reference/scheduling/: index.html
api-reference/spec/: index.html
api-reference/worker/: index.html
bench/: README.md  loadgen.py  multi_sample.py
bench/results/: 2026-05-09-cpu-m1.md  2026-05-09-sweep-cpu-m1.md  2026-05-14-cpu-m5.md  2026-05-14-sweep-cpu-m5.md  2026-05-15-cpu-m5-medians.md
bench/results/2026-05-09-cpu-m1/: bentoml.json  ray-serve.json  sheaf.json
bench/results/2026-05-09-sweep-cpu-m1/: bentoml-100rps.json  bentoml-10rps.json  bentoml-50rps.json  ray-serve-100rps.json  ray-serve-10rps.json  ray-serve-50rps.json  sheaf-100rps.json  sheaf-10rps.json  sheaf-50rps.json
bench/results/2026-05-14-cpu-m5/: ray-serve.json
bench/results/2026-05-14-sweep-cpu-m5/: bentoml-100rps.json  bentoml-10rps.json  bentoml-50rps.json  ray-serve-100rps.json  ray-serve-10rps.json  sheaf-100rps.json  sheaf-10rps.json  sheaf-50rps.json
bench/results/2026-05-15-cpu-m5-medians/1x1/: bentoml-10rps.json  bentoml-30rps.json  bentoml-50rps.json  bentoml-75rps.json  ray-serve-10rps.json  ray-serve-30rps.json  ray-serve-50rps.json  ray-serve-75rps.json  sheaf-10rps.json  sheaf-30rps.json  sheaf-50rps.json  sheaf-75rps.json
bench/results/2026-05-15-cpu-m5-medians/4x1/: bentoml-100rps.json  bentoml-200rps.json  bentoml-400rps.json  ray-serve-100rps.json  ray-serve-200rps.json  ray-serve-400rps.json  sheaf-100rps.json  sheaf-200rps.json  sheaf-400rps.json
bench/servers/: bentoml_server.py  ray_serve_server.py  sheaf_server.py
client/: index.html
client/openapi/: index.html
concepts/: index.html
concepts/batch/: index.html
concepts/batching/: index.html
concepts/caching/: index.html
concepts/feast/: index.html
concepts/lora/: index.html
concepts/streaming/: index.html
concepts/worker/: index.html
deployment/: index.html
deployment/docker/: index.html
deployment/kuberay/: index.html
deployment/modal/: index.html
docs/: index.md  quickstart.md
docs/api-reference/: api.md  batch.md  cache.md  client.md  index.md  lora.md  scheduling.md  spec.md  worker.md
docs/client/: index.md  openapi.md
docs/concepts/: batch.md  batching.md  caching.md  feast.md  index.md  lora.md  streaming.md  worker.md
docs/deployment/: docker.md  index.md  kuberay.md  modal.md
docs/models/: index.md
examples/: quickstart.py  quickstart_audio.py  quickstart_batch.py  quickstart_batch_actors.py  quickstart_cache.py  quickstart_client.py  quickstart_diffusion.py  quickstart_diffusion_modal.py  quickstart_feast.py  quickstart_flux_lora.py  quickstart_flux_lora_modal.py  quickstart_kokoro.py  quickstart_lidar.py  quickstart_modal.py  quickstart_multimodal_generation.py  quickstart_optical_flow.py  quickstart_pose.py  quickstart_server.py  quickstart_streaming.py  quickstart_tabular.py  quickstart_video.py  quickstart_video_modal.py  quickstart_vision.py  quickstart_worker.py  test_modal_server_live.py  time_series_comparison.py
examples/demo/: README.md  app.py
examples/docker/: Dockerfile  README.md  server.py
examples/k8s/: Dockerfile  README.md  app.py  rayservice.yaml
models/: index.html
quickstart/: index.html
search/: search_index.json
src/sheaf/: __init__.py  logging.py  lora.py  metrics.py  modal_server.py  openapi.py  registry.py  server.py  spec.py  tracing.py
src/sheaf/api/: __init__.py  audio.py  audio_generation.py  base.py  depth.py  detection.py  diffusion.py  embedding.py  genomic.py  materials.py  molecular.py  multimodal_embedding.py  multimodal_generation.py  optical_flow.py  point_cloud.py  pose.py  satellite.py  segmentation.py  small_molecule.py  tabular.py  time_series.py  union.py  video.py  weather.py
src/sheaf/backends/: __init__.py  _audio_utils.py  _register.py  bark.py  base.py  chronos.py  depth_anything.py  detr.py  dinov2.py  esm3.py  faster_whisper.py  flux.py  graphcast.py  imagebind.py  kokoro.py  mace.py  moirai.py  molformer.py  musicgen.py  nucleotide_transformer.py  open_clip.py  pointnet.py  prithvi.py  raft.py  sam2.py  sdxl.py  tabpfn.py  timesfm.py  videomae.py  vitpose.py  whisper.py
src/sheaf/batch/: __init__.py  runner.py  spec.py
src/sheaf/cache/: __init__.py
src/sheaf/client/: __init__.py
src/sheaf/integrations/: __init__.py  feast.py
src/sheaf/scheduling/: __init__.py  batch.py
src/sheaf/worker/: __init__.py  queue.py  runner.py  spec.py
tests/: stubs.py  test_api.py  test_bark_backend.py  test_batch.py  test_bucket_by.py  test_cache.py  test_client.py  test_client_integration.py  test_client_request_id.py  test_client_retry.py  test_client_stream.py  test_depth_anything_backend.py  test_detr_backend.py  test_dinov2_backend.py  test_esm3_backend.py  test_faster_whisper_backend.py  test_feast_resolver.py  test_flux_backend.py  test_flux_lora.py  test_graphcast_backend.py  test_imagebind_backend.py  test_kokoro_backend.py  test_logging.py  test_lora_backend_abc.py  test_lora_config.py  test_lora_dispatch.py  test_lora_request_schema.py  test_lora_resolution.py  test_mace_backend.py  test_metrics.py  test_modal_server.py  test_modal_server_lora.py  test_moirai_backend.py  test_molformer_backend.py  test_musicgen_backend.py  test_nucleotide_transformer_backend.py  test_open_clip_backend.py  test_openapi.py  test_pointnet_backend.py  test_prithvi_backend.py  (+19 more)
